fix messages spacing and set inside main-content, fix functionality of organize/sort feature, style tooltip, partial style for show next steps on show page, remove random sort by label

--- a/app/assets/stylesheets/newexperiment.scss
+++ b/app/assets/stylesheets/newexperiment.scss
@@ -23,7 +23,7 @@
 }
 
 .largest-new-container {
-	margin: 6em auto;
+	margin: 10em auto;
 	position: relative;
 	z-index: 0;
 }
