--- a/app/assets/stylesheets/showexperiment.scss
+++ b/app/assets/stylesheets/showexperiment.scss
@@ -23,7 +23,7 @@
 }
 
 .largest-show-container {
-	margin: 6em auto;
+	margin: 10em auto;
 	position: relative;
 	z-index: 0;
 }
@@ -55,7 +55,7 @@
 }
 
 .show-ratings {
-	width: 70%;
+	width: 80%;
 	margin: 0.5em auto;
 	font-size: 0.85em;
 }
@@ -141,20 +141,43 @@
 
 // further steps
 
-.recommended, .extended-learning {
-	position: relative;
-	width: 80%;
-	padding-top: 1em;
-	margin: 2em auto;
-	// margin: 0 auto;
+// .recommended, .extended-learning {
+// 	position: relative;
+// 	width: 80%;
+// 	padding-top: 1em;
+// 	margin: 2em auto;
+// 	// margin: 0 auto;
+// }
+
+// .recommended {
+// 	border-top: solid 2px #D6D6D6;
+// }
+// .extended-learning {
+// 	border-bottom: solid 2px #D6D6D6;
+// }
+
+.show-next-steps {
+  width: 100%;
+  height: 21em;
+  background-color: #F9F9F9;
+  border: 1px solid #D6D6D6;
+  clear: both;
+  margin: 2em auto;
 }
 
-.recommended {
-	border-top: solid 2px #D6D6D6;
+.next-steps-container {
+  width: 80%;
+  margin: 0.5% auto;
 }
-.extended-learning {
-	border-bottom: solid 2px #D6D6D6;
+
+.show-recommended img, .show-extended-learning img {
+  width: 35%;
+  height: 20em;
+  margin: 0.1% 1%;
+  border: 1px solid #D6D6D6;
 }
+
+//comments
 
 add-comment-container {
 	width: 50%;
